- line-height / wrapping issue

--- a/root/webapp/app/styles/patientview/sass/_utils.scss
+++ b/root/webapp/app/styles/patientview/sass/_utils.scss
@@ -57,6 +57,10 @@
     @include bootstrap-clearfix();
 }
 
+.clear-left{
+    clear:left;
+}
+
 ul.unstyled,
 ol.unstyled {
     margin-left: 0;
